Incorporar una Sección de Noticias con 4 columnas de enlaces y vínculos.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </div>
     <div class="container">
         <nav class="nav-main">
-            <img src="https://github.com/FaztWeb/technews-html/blob/master/img/brand.png?raw=true" alt="Logo_Ramiro" class="nav-brand">
+            <img src="/src/img/brand.png" alt="Logo_Ramiro" class="nav-brand">
             <ul class="nav-menu">
                 <li>
                     <a href="#">Inteligencia Artificial</a>
@@ -49,8 +49,47 @@
                 eos voluptas odio veritatis aliquid ipsam ab provident asperiores vel voluptatum cumque expedita autem
                 suscipit?
             </p>
-                <a href="#">Read More <i class= "fas fa-angle-double-right" ></i></a>
+            <a href="#" class="btn">Read More <i class="fas fa-angle-double-right"></i></a>
         </header>
+        <!-- NEWS CARDS -->
+        <div class="news-cards">
+            <div>
+                <img src="src/img/news1.jpg" alt="Alt 1">
+                <h3>Lorem, ipsum dolor.</h3>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis ex omnis, iure animi fuga ut
+                    est libero voluptatibus quos eius?
+                </p>
+                <a href="#">Learn More <i class="fas fa-angle-double-right"></i></a>
+            </div>
+            <div>
+                <img src="src/img/news2.jpg" alt="Alt 2">
+                <h3>Lorem, ipsum dolor.</h3>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis ex omnis, iure animi fuga ut
+                    est libero voluptatibus quos eius?
+                </p>
+                <a href="#">Learn More <i class="fas fa-angle-double-right"></i></a>
+            </div>
+            <div>
+                <img src="src/img/news3.jpg" alt="Alt 3">
+                <h3>Lorem, ipsum dolor.</h3>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis ex omnis, iure animi fuga ut
+                    est libero voluptatibus quos eius?
+                </p>
+                <a href="#">Learn More <i class="fas fa-angle-double-right"></i></a>
+            </div>
+            <div>
+                <img src="src/img/news4.jpg" alt="Alt 4">
+                <h3>Lorem, ipsum dolor.</h3>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis ex omnis, iure animi fuga ut
+                    est libero voluptatibus quos eius?
+                </p>
+                <a href="#">Learn More <i class="fas fa-angle-double-right"></i></a>
+            </div>
+        </div>
     </div>
 </body>
 
