insertar banners insertar columnas de noticias insertar pie de página ajustes de dimensiones eventos de interacción con el usuario panel de menú de navegación en la barra lateral izquierda añadr íconos de interacción con el usuario.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
     <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
     <!-- FONT OSWALD-->
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;500&display=swap" rel="stylesheet">
+
+    <!-- Scroll Reveal -->
+    <!-- https://scrollrevealjs.org/ -->
+    <!-- Al ser un JavaScript se introduce al final del código del body -->
+    <!-- <script src="https://unpkg.com/scrollreveal"></script> -->
     <!--CUSTOM CSS-->
     <link rel="stylesheet" href="src/css/styles.css">
 </head>
@@ -20,9 +25,12 @@
         <i class="fas fa-bars fa-2x"></i>
     </div>
     <div class="container">
+        <!-- Navigation -->
         <nav class="nav-main">
+            <!-- Brand -->
             <img src="/src/img/brand.png" alt="Logo_Ramiro" class="nav-brand">
-            <ul class="nav-menu">
+            <!-- Left Nav -->
+            <ul class="nav-menu show">
                 <li>
                     <a href="#">Inteligencia Artificial</a>
                 </li>
@@ -32,7 +40,15 @@
                 <li>
                     <a href="#">Ciencias Matemática</a>
                 </li>
+                <li>
+                    <a href="#">Física</a>
+                </li>
+                <li>
+                    <a href="#">Sistemas de Control</a>
+                </li>
             </ul>
+
+            <!-- Right Nav -->
             <ul class="nav-menu-right">
                 <a href="#">
                     <i class="fas fa-search"></i>
@@ -40,6 +56,7 @@
             </ul>
         </nav>
         <hr>
+
         <!--Línea divisoria entre la barra de navegación y el contenido-->
         <!-- SHOW CASE: Sección de Noticias -->
         <header class="showcase">
@@ -51,6 +68,7 @@
             </p>
             <a href="#" class="btn">Read More <i class="fas fa-angle-double-right"></i></a>
         </header>
+
         <!-- NEWS CARDS -->
         <div class="news-cards">
             <div>
@@ -90,7 +108,199 @@
                 <a href="#">Learn More <i class="fas fa-angle-double-right"></i></a>
             </div>
         </div>
-    </div>
-</body>
 
+        <!-- Card Banner 1-->
+        <section class="cards-banner-one">
+            <div class="content">
+                <h2>Lorem, ipsum dolor.</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias facere aliquid expedita quisquam
+                    perspiciatis delectus eaque ullam hic doloremque accusamus?</p>
+                <a href="#" class="btn">Learn More <i class="fas fa-angle-double-right"></i></a>
+            </div>
+        </section>
+
+        <!-- NEWS CARDS -->
+        <div class="news-cards">
+            <div>
+                <img src="/src/img/news1.jpg" alt="new 1">
+                <h3>Lorem, ipsum dolor.</h3>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis ex omnis, iure animi fuga ut
+                    est libero voluptatibus quos eius?
+                </p>
+                <a href="#">Learn More <i class="fas fa-angle-double-right"></i></a>
+            </div>
+            <div>
+                <img src="/src/img/news2.jpg" alt="new 2">
+                <h3>Lorem, ipsum dolor.</h3>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis ex omnis, iure animi fuga ut
+                    est libero voluptatibus quos eius?
+                </p>
+                <a href="#">Learn More <i class="fas fa-angle-double-right"></i></a>
+            </div>
+            <div>
+                <img src="/src/img/news3.jpg" alt="new 3">
+                <h3>Lorem, ipsum dolor.</h3>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis ex omnis, iure animi fuga ut
+                    est libero voluptatibus quos eius?
+                </p>
+                <a href="#">Learn More <i class="fas fa-angle-double-right"></i></a>
+            </div>
+            <div>
+                <img src="./src/img/news4.jpg" alt="new 4">
+                <h3>Lorem, ipsum dolor.</h3>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis ex omnis, iure animi fuga ut
+                    est libero voluptatibus quos eius?
+                </p>
+                <a href="#">Learn More <i class="fas fa-angle-double-right"></i></a>
+            </div>
+        </div>
+
+        <!-- Card Banner 2-->
+        <section class="cards-banner-two">
+            <div class="content">
+                <h2>Lorem, ipsum dolor.</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut dolore ad eaque ducimus dolor, explicabo
+                    quas asperiores illum molestias aut saepe rem vero voluptates architecto porro officiis eum dolorem
+                    qui!</p>
+                <a href="#" class="btn">Learn More <i class="fas fa-chevron-right"></i></a>
+            </div>
+        </section>
+
+        <section class="social">
+            <p>Follow Ramiro</p>
+            <div class="links">
+                <a href="#">
+                    <i class="fab fa-facebook-f"></i>
+                </a>
+                <a href="#">
+                    <i class="fab fa-twitter"></i>
+                </a>
+                <a href="#">
+                    <i class="fab fa-linkedin"></i>
+                </a>
+            </div>
+        </section>
+    </div>
+    <!-- Footer Links -->
+    <div class="footer-links">
+        <div class="footer-container">
+            <ul>
+                <li>
+                    <a href="#">
+                        <h3>Title One</h3>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">Blockchain</a>
+                </li>
+                <li>
+                    <a href="#">Machine Learning</a>
+                </li>
+                <li>
+                    <a href="#">Artificial Intelligence</a>
+                </li>
+                <li>
+                    <a href="#">Quantum Computing</a>
+                </li>
+                <li>
+                    <a href="#">Startup</a>
+                </li>
+                <li>
+                    <a href="#">Cryptocurrencies</a>
+                </li>
+            </ul>
+            <ul>
+                <li>
+                    <a href="#">
+                        <h3>Title Two</h3>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">Blockchain</a>
+                </li>
+                <li>
+                    <a href="#">Machine Learning</a>
+                </li>
+                <li>
+                    <a href="#">Artificial Intelligence</a>
+                </li>
+                <li>
+                    <a href="#">Quantum Computing</a>
+                </li>
+                <li>
+                    <a href="#">Startup</a>
+                </li>
+                <li>
+                    <a href="#">Cryptocurrencies</a>
+                </li>
+            </ul>
+            <ul>
+                <li>
+                    <a href="#">
+                        <h3>Title Three</h3>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">Blockchain</a>
+                </li>
+                <li>
+                    <a href="#">Machine Learning</a>
+                </li>
+                <li>
+                    <a href="#">Artificial Intelligence</a>
+                </li>
+                <li>
+                    <a href="#">Quantum Computing</a>
+                </li>
+                <li>
+                    <a href="#">Startup</a>
+                </li>
+                <li>
+                    <a href="#">Cryptocurrencies</a>
+                </li>
+            </ul>
+            <ul>
+                <li>
+                    <a href="#">
+                        <h3>Title Four</h3>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">Blockchain</a>
+                </li>
+                <li>
+                    <a href="#">Machine Learning</a>
+                </li>
+                <li>
+                    <a href="#">Artificial Intelligence</a>
+                </li>
+                <li>
+                    <a href="#">Quantum Computing</a>
+                </li>
+                <li>
+                    <a href="#">Startup</a>
+                </li>
+                <li>
+                    <a href="#">Cryptocurrencies</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+
+
+    <!-- Footer -->
+    <footer class="footer-copyright">
+        <h3>Tech News Copyright</h3>
+    </footer>
+
+    <!-- Scroll Reveal -->
+    <!-- https://scrollrevealjs.org/ -->
+    <script src="https://unpkg.com/scrollreveal"></script>
+    <!-- CUSTOM JS -->
+    <script src="./src/models/main.js"></script>
+</body>
 </html>
